# tuplet

./: .gitignore  README.md  dune-project  index.html  tuplet.opam
.github/workflows/: docs.yml
lib/: dune  sig.ml  tuplet.ml  tuplet.mli
test/: benchmark.ml  dune  test_recursive.ml
tuplet/: index.html
tuplet/Tuplet/: index.html
tuplet/Tuplet/Endoconstructors/: index.html
tuplet/Tuplet/Endoconstructors/argument-1-A/: index.html
tuplet/Tuplet/Endoconstructors/argument-1-A/Elt/: index.html
tuplet/Tuplet/Endoconstructors/argument-2-F/: index.html
tuplet/Tuplet/Make/: index.html
tuplet/Tuplet/Make/argument-1-Elt/: index.html
tuplet/Tuplet/Mapping/: index.html
tuplet/Tuplet/Mapping/argument-1-A/: index.html
tuplet/Tuplet/Mapping/argument-1-A/Elt/: index.html
tuplet/Tuplet/Mapping/argument-2-B/: index.html
tuplet/Tuplet/Mapping/argument-2-B/Elt/: index.html
tuplet/Tuplet/Product/: index.html
tuplet/Tuplet/Product/Elt/: index.html
tuplet/Tuplet/Product/argument-1-A/: index.html
tuplet/Tuplet/Product/argument-1-A/Elt/: index.html
tuplet/Tuplet/Product/argument-2-B/: index.html
tuplet/Tuplet/Product/argument-2-B/Elt/: index.html
tuplet/Tuplet/Sig/: index.html
tuplet/Tuplet/Sig/module-type-Abstract/: index.html
tuplet/Tuplet/Sig/module-type-Constructors/: index.html
tuplet/Tuplet/Sig/module-type-S/: index.html
tuplet/Tuplet/Sig/module-type-S/Elt/: index.html
tuplet/Tuplet/Sig/module-type-Type1/: index.html
tuplet/Tuplet__/: index.html
tuplet/Tuplet__Sig/: index.html
